# claudius

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  migrate-to-slack.sh  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: AGENTS.md  ARCHITECTURE.md  DATA-SCHEMA.md  DECISIONS.md  DEPLOYMENT.md  LUCID-RULES.md  PHASE-STATUS.md  SKILLS-GUIDE.md  claudius-instructions.md  claudius-project-blueprint.md
prompts/: CLAUDIUS.md
scripts/: claudius.service  deploy-to-lumen.sh  health-check.sh  setup.sh
skills/: README.md  code-review.md  daily-report.md  system-health.md
src/: config.py  daemon.py  memory.py  router.py  scheduler.py  session.py  skills.py
src/bridge/: base.py  slack.py  telegram.py
tests/: test_daemon.py
